--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation group: 'org.testng', name: 'testng', version: '7.5'
+    testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.3'
+    testImplementation group: 'io.appium', name: 'java-client', version: '8.0.0'
+    testImplementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
+    testImplementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
 }
 
+
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
